--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,1 +1,11 @@
 /* В этом файле вы импортируете все шрифты для сайта. Один из них вариативный и требует особенной настройки */
+@font-face {
+    font-display: swap;
+    font-family: 'Roboto-Flex-Variable';
+    src:
+      local('Roboto-Flex-Variable'),
+      url('../fonts/Roboto-Flex-Variable.woff2') 
+      format('woff2 supports variations'),
+      url('../fonts/Roboto-Flex-Variable.woff2') 
+      format('woff2-variations');
+  }
