--- a/styles/animations.css
+++ b/styles/animations.css
@@ -9,3 +9,98 @@
 ✦ button__text — для обозначения текстового элемента внутри кнопки
 
 */
+
+@keyframes heart {
+    0% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(1.25);
+    }
+  }
+  
+  @keyframes sparks {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+
+
+/*initial*/
+.like-icon .contour {
+    fill: var(--heart-contour-color, #000);
+    transition: fill 0.1s linear;
+}
+
+.like-icon .core {
+    fill: var(--bg-color, #fff);
+    transition: fill 0.3s linear 0.03s;
+}
+  
+.like-icon .main-body {
+    fill: var(--bg-color, #fff);
+    transition: fill 0.3s linear;
+}
+
+.like-icon .sparks {
+    opacity: 0;
+}
+  
+.like-icon .heart {
+    transform-origin: center;
+}
+  
+
+/*hover*/
+.like-icon:hover .core {
+    fill: var(--heart-contour-color, #000);
+    transition: fill 0.3s linear;
+}
+  
+.like-icon:hover .main-body {
+    fill: var(--heart-contour-color, #000);
+    transition: fill 0.3s linear 0.05s;
+}
+
+/*active*/
+.like-icon:active .core {
+    fill: var(--heart-sparks-color, red);
+    transition: fill 0.3s linear;
+}
+  
+.like-icon:active .main-body {
+    fill: var(--heart-sparks-color, red);
+    transition: fill 0.3s linear 0.05s;
+}
+
+/*is-liked*/
+
+.like-icon.is-liked .core {
+    fill: var(--heart-sparks-color, #ff0000);
+    transition: fill 0.3s linear 0.05s; 
+}
+
+.like-icon.is-liked .main-body {
+    fill: var(--heart-sparks-color, #ff0000);
+    transition: fill 0.3s linear 0.05s; 
+}
+
+.like-icon.is-liked .contour {
+    fill: var(--heart-sparks-color, #ff0000);
+    transition: fill 0.3s linear 0.06s; 
+}
+
+.like-icon.is-liked .heart {
+    animation: heart 0.3s ease-in 0.1s 1 alternate;
+}
+  
+  .like-icon.is-liked .sparks {
+    animation: sparks 0.3s ease-in 0.3s 1 alternate;
+}
+
+
+
