--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,14 @@
 */
 
 .page {
+  padding-block-start: 100px;
+  color: var(--text-color, #000);
+  font-family: var(--main-font-family, "Inter-Variable", sans-serif);
+  background-color: var(--bg-color, #fff);
+  background-image: var(--bg-image);
+  background-size: cover;
+  background-attachment: fixed;
+  font-variation-settings: "wght" var(--main-font-weight, 400);
   min-inline-size: 320px;
   min-block-size: 100dvb;
 }
@@ -22,13 +30,250 @@
   font-family: var(--accent-font-family, "PressStart2P", fantasy);
   line-height: normal;
   text-transform: uppercase;
+  padding-block-start: clamp(7.5rem, 7.3239rem + 0.7512vw, 8rem);
+  padding-block-end: clamp(7.5rem, 7.3239rem + 0.7512vw, 8rem);
+  padding-inline-start: clamp(0.875rem, -1.4688rem + 10vw, 7.53125rem);
+  padding-inline-end: clamp(0.875rem, -1.4688rem + 10vw, 7.53125rem);
+  margin-block-end: 100px;
+  max-inline-size: 700px;
+  max-block-size: 368px;
 }
 
 .header-logo {
-  margin-block-start: clamp(7.5rem, 7.1479rem + 1.5023vw, 8.5rem);
+  font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+  line-height: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
   margin-block-end: 20px;
 }
 
 .header-title {
   font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  line-height: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
 }
+
+.main {
+  display: grid;
+  justify-items: center;
+  gap: 57px;
+}
+
+.card-list {
+  display: grid;
+  gap: 50px;
+}
+
+.card {
+  margin-inline: auto;
+  border: 2px solid #000000;
+  background: var(--bg-color, #fff);
+  max-inline-size: 696px;
+}
+
+.card-title {
+  border-block-end: 2px solid #000;
+  padding: 4px 10px;
+  font-size: 18px;
+  line-height: normal;
+  font-variation-settings: "wght" var(--card-title-font-weight, 700);
+}
+
+.card-image-box {
+  position: relative;
+  overflow: hidden;
+}
+
+.card-image {
+  display: block;
+  object-fit: cover;
+  object-position: center;
+  inline-size: 100%;
+  min-inline-size: 696px;
+  aspect-ratio: 1 / 1;
+}
+
+.image-watermark {
+  position: absolute;
+  inset-inline-end: 23px;
+  inset-block-start: 26px;
+  z-index: 1;
+  opacity: 0.5;
+  font-family: var(--accent-font-family, "PressStart2P", fantasy);
+  font-size: 14px;
+  line-height: normal;
+  text-transform: uppercase;
+  color: var(--text-color, #000);
+  text-shadow: 0 1px #fff;
+  mix-blend-mode: hard-light;
+}
+
+.card-text {
+  display: grid;
+  gap: 27px;
+  padding: 27px 0 0 22px;
+  border-block-start: 2px solid var(--text-color, #000000);
+  font-size: 18px;
+  line-height: 21px;
+}
+
+.card-buttons {
+  display: flex;
+  gap: 5px;
+  padding: 25px 25px 23px 25px;
+  align-items: stretch;
+  justify-content: end;
+}
+
+.button {
+  position: relative;
+  border: 2px solid var(--text-color, #000);
+  font-family: var(--accent-font-family, "PressStart2P", fantasy);
+  font-size: 14px;
+  text-transform: inherit;
+  background: var(--bg-color, #fff);
+  transition: box-shadow 0.3s ease;
+  cursor: pointer;
+  appearance: none;
+  z-index: 1;
+}
+
+.card__like-button {
+  inline-size: 130px;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:focus-visible {
+  box-shadow: 2px 2px 0px 0px #000;
+}
+
+.button::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: var(--text-color, #000);
+  transition: transform 0.5s ease-in-out;
+  transform: scaleX(0);
+  transform-origin: left;
+  inline-size: 100%;
+  block-size: 100%;
+  z-index: -1;
+}
+
+.button:hover::before {
+  transform: scaleX(1);
+}
+
+.button__text {
+  color: var(--button-text-color, #fff);
+  mix-blend-mode: difference;
+}
+
+.card__icon-button {
+  display: grid;
+  background: #00000000;
+  border: 2px solid #00000000;
+  padding: 0;
+  transition: border-color 0.3s ease;
+  appearance: none;
+  cursor: pointer;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  border-color: var(--text-color, #000);
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  padding-block: 50px 103px;
+}
+
+.save-button {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  padding: 15px 20px;
+}
+
+.floppy-icon {
+  inline-size: 22px;
+  block-size: 22px;
+  color: var(--button-text-color, #fff);
+  mix-blend-mode: difference;
+}
+
+.dlg-floppy-icon {
+  inline-size: 39px;
+  block-size: 39px;
+  flex-shrink: 0;
+}
+
+.dlg-save {
+  background: var(--bg-color, #fff);
+  border: 2px solid var(--text-color, #000);
+  padding: 30px;
+  color: var(--text-color, #000);
+  font-family: var(--accent-font-family, "PressStart2P", fantasy);
+  line-height: 1.5em;
+  text-transform: uppercase;
+  max-inline-size: 355px;
+}
+
+.dlg-save::backdrop {
+  opacity: 0.75;
+  background: var(--black-color, #000);
+}
+
+.dlg-save[open] {
+  display: grid;
+  grid-template-rows: min-content min-content;
+  gap: 30px;
+}
+
+.dlg-save-content {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.dlg-save-button {
+  inline-size: 100%;
+  block-size: 38px;
+}
+
+@media (width <= 375px) {
+
+  .floppy-icon {
+    block-size: 28px;
+    inline-size: 28px;
+  }
+
+  .save-button {
+    flex-direction: column;
+  }
+
+  .dlg-save {
+    max-inline-size: 340px;
+    padding: 28px 34px 28px 40px;
+  }
+}
+
+
+@supports (
+  (-webkit-text-stroke: 1px var(--page-background-color, #ffffff)) or
+    (text-stroke: 1px var(--page-background-color, #ffffff))
+) {
+  .image-watermark {
+    text-shadow: none;
+    -webkit-text-stroke: 1px var(--page-background-color, #ffffff);
+    text-stroke: 1px var(--page-background-color, #ffffff);
+  }
+}
+
